--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <!-- dynamically populated from manifest:
           <button id="btn-person" class="btn button">
             <i class="icon icon-user"></i>
-            <span>Patient</span>
+            <span>Patient!</span>
           </button>
           -->
         </div>
