--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
            <div class="dropdown">
               <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">FHIR Version
                  <span class="caret"></span></button>
-                 <ul class="dropdown-menu" id="rVersion">
-                   <li><a>R4</a></li>
-                   <li><a>R5</a></li>
+                 <ul class="dropdown-menu">
+                   <li class="r" id="r4"><a>R4</a></li>
+                   <li class="r" id="r5"><a>R5</a></li>
                  </ul>
            </div>
       </td>
